--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WasteWise"
         tools:targetApi="31">
-
+        <activity
+            android:name=".VerifiedSuccActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OtpPageActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
