--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.WasteWise"
         tools:targetApi="31">
         <activity
+            android:name=".RoutesActivity"
+            android:exported="false" />
+        <activity
             android:name=".VerifiedSuccActivity"
             android:exported="false" />
         <activity
